# spellchecker

./: .gitignore  Cargo.toml  LICENSE
src/: conseq.rs  generic_meb.rs  learn.rs  main.rs  repeats.rs  train.rs
text-tests/: shf.bib
