[package]
name = "spellchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
criterion = "0.5.1"
clap = "4.3.12"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
